remove 1.20 support