@@ -7,19 +7,19 @@ import java.util.List;
 public final class VLists {
     public static <T> List<T> reverse(List<T> list) {
         //? if java: >=21 {
-        /*return list.reversed();
-        *///?} else {
-        List<T> reversedList = new ArrayList<>(list);
+        return list.reversed();
+        //?} else {
+        /*List<T> reversedList = new ArrayList<>(list);
         Collections.reverse(reversedList);
         return reversedList;
-        //?}
+        *///?}
     }
 
     public static <T> T getLast(List<T> list) {
         //? if java: >=21 {
-        /*return list.getLast();
-        *///?} else {
-        return list.get(list.size() - 1);
-        //?}
+        return list.getLast();
+        //?} else {
+        /*return list.get(list.size() - 1);
+        *///?}
     }
 }
